syntax="proto3";
package Carrier;

message WifiCell { 
	string mac     = 1;
	string singnal = 2;
}

message StationCell {
	string lac = 1;
	string cid = 2;
	string dbm = 3;
}

// 将数据上传给位置解析服务的结构
// 如果解析成功 则 将位置转发，使用message ReportLocation 如果失败则返回给请求方
message LocationInfo { 
	// 附加数据  LocationExtra 序列化后的结果
	bytes extra                       = 1;

	// Wifi位置
	repeated WifiCell wifi_cell       = 2; 

	// 基站位置
	repeated StationCell station_cell = 3;
}

// 最终抛给上层服务的结构,考虑到解析位置服务的独立性，将其他的数据都作为Extra数据进行处理
message ReportLocation {
	// 附加数据  LocationExtra 序列化后的结果
	bytes extra      = 1;
	string longitude = 2;
	string latitude  = 3;
	string speed     = 4;
}
